added authentication support
