# src/modules/auth/auth.types.ts
@@ -1,0 +1,8 @@
+import { IsEmail, Length } from 'class-validator';
+
+export class AuthPayload {
+  @IsEmail()
+  email: string;
+
+  password: string;
+}
